fix bottom nav on mobile. stay at bottom position fixed

--- a/src/css/components/_Navigation.styl
+++ b/src/css/components/_Navigation.styl
@@ -54,3 +54,6 @@
   a
     font-size: .8em
     margin: 0 15px
+
+  &.Grid
+    position: fixed
